`Added new endpoints for getting draft and archived posts by author ID, updated error handling and added new routes to swagger output`
